[fuchsia][mojo/edk] Clone FD if transfer fails

When trying to send a platform handle represented as a file descriptor
cross-process on Fuchsia, we attempt to transfer the FD in-place which
is more efficient than the usual clone + send + close pattern. In some
cases the transfer operation fails, however, so we have to make a fresh
clone to transfer.

Bug: 776163
Change-Id: I6d25e19ee7fef194261f5d1e624a4d8de291d6b3
Reviewed-on: https://chromium-review.googlesource.com/727121
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509951}
Former-commit-id: c2a865c7451560887659cce5b27c8d5f363e0051